--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,6 @@
-
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/todo
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: yevs2007
